[project]
name = "image_transceiver"
description = "ImageTransceiver is a custom node that enables image generating clients to connect directly to ComfyUI, and send those images in near real-time. For example, an image manipulation program like GIMP can connect an image to a workflow in ComfyUI, and every time the image changes in GIMP, the changes are immediately made in the workflow. Cloning"
# Version must have exactly three fields, with period as delimiter.
version = "0.7.12"
license = {file = "LICENSE"}

readme = "README.md"
authors = [
    { name = "Charlweed" }
]

requires-python = ">=3.8"
dependencies = [
    "numpy",
    "torch",
    "Pillow",
    "websockets",
]

[project.urls]
Repository = "https://github.com/Charlweed/image_transceiver"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "charlweed"
DisplayName = "image_transceiver"
Icon = "https://raw.githubusercontent.com/Charlweed/image_transceiver/main/illustrations/transceiver_256sq.png"
